# cmd2-example-apps

./: .gitignore  README.md  pyproject.toml  pytest_all.py  requirements.txt  setup.cfg
.github/workflows/: ci.yml
app1/: README.md  app.py  sub_command.py  test_app.py
app2/: README.md  app.py  requirements.txt
app3/: README.md  app.py
app3/command_sets/: basket.py  bread.py  candidate.py  chemistry.py  child.py  cigarette.py  concept.py  context.py  driver.py  economics.py  elevator.py  engine.py  maintenance.py  photo.py
app4/: README.md  app.py
app4/command_sets/: __init__.py
app4/common/: utils.py
app5/: README.md  app.py  transcript.txt
app5/command_sets/: __init__.py  audio.py  merge.py  video.py
app5/common/: banner.py  log_helper.py
cookiecutter-simple-app/: cookiecutter.json
cookiecutter-simple-app/{{cookiecutter.app_name}}/: README.md  app.py
cookiecutter-simple-app/{{cookiecutter.app_name}}/command_sets/: family.py
src/Utils/: app.py
src/app1/: README.md  app.py  sub_command.py
src/app2/: README.md  app.py  first.py
src/app3/: README.md  app.py
src/app3/command_sets/: __init__.py  alcohol.py  assignment.py  basis.py  cousin.py  disease.py  explanation.py  library.py  mood.py  pie.py  poet.py  product.py  profession.py  soup.py  version.py
src/app4/: README.md  __init__.py  app.py
src/app4/command_sets/: website.py
src/app5/: README.md  app.py
src/app5/command_sets/: audio.py  (+2 more)
src/app6/: README.md  app.py
tests/: test_app1.py  test_app2.py  test_app3.py  test_app4.py  test_app5.py  test_app6.py  test_app6_helper.py
(+6 files in other folders)
