
[metadata]
name = cmd2-example-app
version = 0.1.0
description = example application
classifiers = 
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8

[options]
package_dir = 
	=src
packages = find:
install_requires = 
    cmd2
	Random-Word-Generator
	rich
	cmd2-ext-test
	thefuzz
	xdg

[options.entry_points]
console_scripts = 
	app1 = app1.app:main
	app2 = app2.app:main
	app3 = app3.app:main
	app4 = app4.app:main

[options.packages.find]
where = src
